add sesi3 folder

--- a/sesi2/position.html
+++ b/sesi2/position.html
@@ -22,13 +22,16 @@
             bottom: 0;
             left: 0;
         }
+        .inikelas{
+
+        }
     </style>
 </head>
 <body>
     <div id="relative1">div 1</div>
     <div id="relative2">div 2</div>
 
-    <div id="fixed1">
+    <div id="fixed1" class="inikelas">
         ini fixed
     </div>
 </body>
