--- a/sesi3/portfolio.html
+++ b/sesi3/portfolio.html
@@ -175,7 +175,7 @@
                 <input type="text" class="form-control" />
             </div>
             <div class="form-group">
-                <label class="form-label">Nama</label>
+                <label class="form-label">Alamat</label>
                 <input type="text" class="form-control" />
             </div>
             <div class="form-group">
